# nrf52805_tubo_road

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/arm/pmsys_v2/: Kconfig.board  Kconfig.defconfig  pmsys_v2.dts  pmsys_v2.yaml  pmsys_v2_defconfig
boards/arm/pmsys_v3/: Kconfig.board  Kconfig.defconfig  pmsys_v3.dts  pmsys_v3.yaml  pmsys_v3_defconfig
boards/arm/pmsys_v5/: Kconfig.board  Kconfig.defconfig  pmsys_v5.dts  pmsys_v5.yaml  pmsys_v5_defconfig
src/: main.c
src/lis2dh12tr/: lis2dh12_reg.h  lis2dh12tr.c  lis2dh12tr.h
src/tk2700/: tk2700.c  tk2700.h
src/xgzp6812d/: xgzp6812d.c  xgzp6812d.h
